--- a/SVM.ipynb
+++ b/SVM.ipynb
@@ -2612,12 +2612,12 @@
       "land                  7\n",
       "xsnoop                4\n",
       "ftp_write             3\n",
+      "sqlattack             2\n",
       "worm                  2\n",
       "phf                   2\n",
-      "sqlattack             2\n",
       "loadmodule            2\n",
-      "perl                  2\n",
       "udpstorm              2\n",
+      "perl                  2\n",
       "imap                  1\n",
       "Name: label, dtype: int64\n"
      ]
@@ -4458,12 +4458,12 @@
     {
      "data": {
       "text/plain": [
-       "['service_harvest',\n",
-       " 'service_red_i',\n",
-       " 'service_http_8001',\n",
-       " 'service_http_2784',\n",
+       "['service_red_i',\n",
        " 'service_aol',\n",
-       " 'service_urh_i']"
+       " 'service_urh_i',\n",
+       " 'service_http_8001',\n",
+       " 'service_harvest',\n",
+       " 'service_http_2784']"
       ]
      },
      "execution_count": 18,
@@ -5541,7 +5541,7 @@
     {
      "data": {
       "text/plain": [
-       "25.872013568878174"
+       "42.665459632873535"
       ]
      },
      "execution_count": 55,
@@ -5553,7 +5553,7 @@
     "from sklearn.svm import SVC\n",
     "import time\n",
     "start = time.time()\n",
-    "clf_DoS = SVC(kernel='linear', C=1.0, random_state=0)\n",
+    "clf_DoS = SVC()\n",
     "clf_DoS.fit(X_DoS, Y_DoS)\n",
     "end = time.time() - start\n",
     "end"
@@ -5567,7 +5567,7 @@
     {
      "data": {
       "text/plain": [
-       "26.93698239326477"
+       "29.105191469192505"
       ]
      },
      "execution_count": 56,
@@ -5577,7 +5577,7 @@
    ],
    "source": [
     "start = time.time()\n",
-    "clf_Probe = SVC(kernel='linear', C=1.0, random_state=0)\n",
+    "clf_Probe = SVC()\n",
     "clf_Probe.fit(X_Probe, Y_Probe)\n",
     "end = time.time() - start\n",
     "end"
@@ -5591,7 +5591,7 @@
     {
      "data": {
       "text/plain": [
-       "11.625941276550293"
+       "9.253580331802368"
       ]
      },
      "execution_count": 57,
@@ -5601,7 +5601,7 @@
    ],
    "source": [
     "start = time.time()\n",
-    "clf_R2L = SVC(kernel='linear', C=1.0, random_state=0)\n",
+    "clf_R2L = SVC()\n",
     "clf_R2L.fit(X_R2L, Y_R2L)\n",
     "end = time.time() - start\n",
     "end"
@@ -5615,7 +5615,7 @@
     {
      "data": {
       "text/plain": [
-       "1.4730610847473145"
+       "4.022872447967529"
       ]
      },
      "execution_count": 58,
@@ -5625,7 +5625,7 @@
    ],
    "source": [
     "start = time.time()\n",
-    "clf_U2R = SVC(kernel='linear', C=1.0, random_state=0)\n",
+    "clf_U2R = SVC()\n",
     "clf_U2R.fit(X_U2R, Y_U2R)\n",
     "end = time.time() - start\n",
     "end"
@@ -5639,7 +5639,7 @@
     {
      "data": {
       "text/plain": [
-       "288.083536863327"
+       "124.95306658744812"
       ]
      },
      "execution_count": 59,
@@ -5649,7 +5649,7 @@
    ],
    "source": [
     "start = time.time()\n",
-    "clf_rfeDoS = SVC(kernel='linear', C=1.0, random_state=0)\n",
+    "clf_rfeDoS = SVC()\n",
     "clf_rfeDoS.fit(X_rfeDoS, Y_DoS)\n",
     "end = time.time() - start\n",
     "end"
@@ -5663,7 +5663,7 @@
     {
      "data": {
       "text/plain": [
-       "19.442989587783813"
+       "10.95717453956604"
       ]
      },
      "execution_count": 60,
@@ -5673,7 +5673,7 @@
    ],
    "source": [
     "start = time.time()\n",
-    "clf_rfeProbe = SVC(kernel='linear', C=1.0, random_state=0)\n",
+    "clf_rfeProbe = SVC()\n",
     "clf_rfeProbe.fit(X_rfeProbe, Y_Probe)\n",
     "end = time.time() - start\n",
     "end"
@@ -5687,7 +5687,7 @@
     {
      "data": {
       "text/plain": [
-       "5.946096181869507"
+       "2.9261739253997803"
       ]
      },
      "execution_count": 61,
@@ -5697,7 +5697,7 @@
    ],
    "source": [
     "start = time.time()\n",
-    "clf_rfeR2L = SVC(kernel='linear', C=1.0, random_state=0)\n",
+    "clf_rfeR2L = SVC()\n",
     "clf_rfeR2L.fit(X_rfeR2L, Y_R2L)\n",
     "end = time.time() - start\n",
     "end"
@@ -5711,7 +5711,7 @@
     {
      "data": {
       "text/plain": [
-       "1.712449073791504"
+       "1.092695951461792"
       ]
      },
      "execution_count": 62,
@@ -5721,7 +5721,7 @@
    ],
    "source": [
     "start = time.time()\n",
-    "clf_rfeU2R = SVC(kernel='linear', C=1.0, random_state=0)\n",
+    "clf_rfeU2R = SVC()\n",
     "clf_rfeU2R.fit(X_rfeU2R, Y_U2R)\n",
     "end = time.time() - start\n",
     "end"
@@ -5736,7 +5736,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.579423189163208\n"
+      "3.775933027267456\n"
      ]
     },
     {
@@ -5772,13 +5772,13 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>9455</td>\n",
-       "      <td>256</td>\n",
+       "      <td>9546</td>\n",
+       "      <td>165</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1359</td>\n",
-       "      <td>6101</td>\n",
+       "      <td>2087</td>\n",
+       "      <td>5373</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -5787,8 +5787,8 @@
       "text/plain": [
        "Predicted attacks     0     1\n",
        "Actual attacks               \n",
-       "0                  9455   256\n",
-       "1                  1359  6101"
+       "0                  9546   165\n",
+       "1                  2087  5373"
       ]
      },
      "execution_count": 63,
@@ -5813,7 +5813,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8088657855987549\n"
+      "3.554291248321533\n"
      ]
     },
     {
@@ -5849,13 +5849,13 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>9576</td>\n",
-       "      <td>135</td>\n",
+       "      <td>9233</td>\n",
+       "      <td>478</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1285</td>\n",
-       "      <td>1136</td>\n",
+       "      <td>1018</td>\n",
+       "      <td>1403</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -5864,8 +5864,8 @@
       "text/plain": [
        "Predicted attacks     0     2\n",
        "Actual attacks               \n",
-       "0                  9576   135\n",
-       "2                  1285  1136"
+       "0                  9233   478\n",
+       "2                  1018  1403"
       ]
      },
      "execution_count": 64,
@@ -5890,7 +5890,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.5325977802276611\n"
+      "2.400582790374756\n"
      ]
     },
     {
@@ -5926,23 +5926,23 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>9639</td>\n",
-       "      <td>72</td>\n",
+       "      <td>9710</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2737</td>\n",
-       "      <td>148</td>\n",
+       "      <td>2883</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Predicted attacks     0    3\n",
-       "Actual attacks              \n",
-       "0                  9639   72\n",
-       "3                  2737  148"
+       "Predicted attacks     0  3\n",
+       "Actual attacks            \n",
+       "0                  9710  1\n",
+       "3                  2883  2"
       ]
      },
      "execution_count": 65,
@@ -5967,7 +5967,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.05385637283325195\n"
+      "0.9055736064910889\n"
      ]
     },
     {
@@ -5992,34 +5992,30 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th>Predicted attacks</th>\n",
        "      <th>0</th>\n",
-       "      <th>4</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Actual attacks</th>\n",
-       "      <th></th>\n",
        "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>9710</td>\n",
-       "      <td>1</td>\n",
+       "      <td>9711</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>67</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Predicted attacks     0  4\n",
-       "Actual attacks            \n",
-       "0                  9710  1\n",
-       "4                    67  0"
+       "Predicted attacks     0\n",
+       "Actual attacks         \n",
+       "0                  9711\n",
+       "4                    67"
       ]
      },
      "execution_count": 66,
@@ -6044,10 +6040,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy DoS: 0.99371 (+/- 0.00375)\n",
-      "Precision DoS: 0.99107 (+/- 0.00785)\n",
-      "Recall DoS: 0.99450 (+/- 0.00388)\n",
-      "F-measure DoS: 0.99278 (+/- 0.00428)\n"
+      "Accuracy DoS: 0.99359 (+/- 0.00368)\n",
+      "Precision DoS: 0.99001 (+/- 0.00717)\n",
+      "Recall DoS: 0.99531 (+/- 0.00365)\n",
+      "F-measure DoS: 0.99265 (+/- 0.00420)\n"
      ]
     }
    ],
@@ -6073,10 +6069,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy Probe: 0.98450 (+/- 0.00526)\n",
-      "Precision Probe: 0.96907 (+/- 0.01031)\n",
-      "Recall Probe: 0.98365 (+/- 0.00686)\n",
-      "F-measure Probe: 0.97613 (+/- 0.00800)\n"
+      "Accuracy Probe: 0.98591 (+/- 0.00451)\n",
+      "Precision Probe: 0.97568 (+/- 0.00782)\n",
+      "Recall Probe: 0.98050 (+/- 0.00807)\n",
+      "F-measure Probe: 0.97805 (+/- 0.00704)\n"
      ]
     }
    ],
@@ -6100,10 +6096,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy R2L: 0.96793 (+/- 0.00738)\n",
-      "Precision R2L: 0.94854 (+/- 0.00994)\n",
-      "Recall R2L: 0.96264 (+/- 0.01388)\n",
-      "F-measure R2L: 0.95529 (+/- 0.01048)\n"
+      "Accuracy R2L: 0.96745 (+/- 0.00707)\n",
+      "Precision R2L: 0.94853 (+/- 0.01089)\n",
+      "Recall R2L: 0.96110 (+/- 0.01244)\n",
+      "F-measure R2L: 0.95456 (+/- 0.00985)\n"
      ]
     }
    ],
@@ -6127,10 +6123,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy U2R: 0.99632 (+/- 0.00390)\n",
-      "Precision U2R: 0.91056 (+/- 0.17934)\n",
-      "Recall U2R: 0.82909 (+/- 0.21833)\n",
-      "F-measure U2R: 0.84869 (+/- 0.16029)\n"
+      "Accuracy U2R: 0.99550 (+/- 0.00277)\n",
+      "Precision U2R: 0.93628 (+/- 0.17025)\n",
+      "Recall U2R: 0.70218 (+/- 0.18833)\n",
+      "F-measure U2R: 0.76329 (+/- 0.18724)\n"
      ]
     }
    ],
@@ -6249,7 +6245,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.4321677684783936\n"
+      "4.643503189086914\n"
      ]
     },
     {
@@ -6285,13 +6281,13 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>9589</td>\n",
-       "      <td>122</td>\n",
+       "      <td>9677</td>\n",
+       "      <td>34</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2041</td>\n",
-       "      <td>5419</td>\n",
+       "      <td>3578</td>\n",
+       "      <td>3882</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -6300,8 +6296,8 @@
       "text/plain": [
        "Predicted attacks     0     1\n",
        "Actual attacks               \n",
-       "0                  9589   122\n",
-       "1                  2041  5419"
+       "0                  9677    34\n",
+       "1                  3578  3882"
       ]
      },
      "execution_count": 76,
@@ -6326,7 +6322,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.1998188495635986\n"
+      "3.446747303009033\n"
      ]
     },
     {
@@ -6362,23 +6358,23 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>9662</td>\n",
-       "      <td>49</td>\n",
+       "      <td>9574</td>\n",
+       "      <td>137</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1898</td>\n",
-       "      <td>523</td>\n",
+       "      <td>995</td>\n",
+       "      <td>1426</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Predicted attacks     0    2\n",
-       "Actual attacks              \n",
-       "0                  9662   49\n",
-       "2                  1898  523"
+       "Predicted attacks     0     2\n",
+       "Actual attacks               \n",
+       "0                  9574   137\n",
+       "2                   995  1426"
       ]
      },
      "execution_count": 77,
@@ -6403,7 +6399,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.32215118408203125\n"
+      "1.0283684730529785\n"
      ]
     },
     {
@@ -6428,34 +6424,30 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th>Predicted attacks</th>\n",
        "      <th>0</th>\n",
-       "      <th>3</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Actual attacks</th>\n",
-       "      <th></th>\n",
        "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>9035</td>\n",
-       "      <td>676</td>\n",
+       "      <td>9711</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2151</td>\n",
-       "      <td>734</td>\n",
+       "      <td>2885</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Predicted attacks     0    3\n",
-       "Actual attacks              \n",
-       "0                  9035  676\n",
-       "3                  2151  734"
+       "Predicted attacks     0\n",
+       "Actual attacks         \n",
+       "0                  9711\n",
+       "3                  2885"
       ]
      },
      "execution_count": 78,
@@ -6480,7 +6472,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.026954174041748047\n"
+      "0.3022499084472656\n"
      ]
     },
     {
@@ -6553,10 +6545,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy Dos Rfec: 0.92150 (+/- 0.01487)\n",
-      "Precision Dos Rfec: 0.98171 (+/- 0.01047)\n",
-      "Recall Dos Rfec: 0.83485 (+/- 0.03084)\n",
-      "F-measure Dos Rfec: 0.90228 (+/- 0.01987)\n"
+      "Accuracy Dos Rfec: 0.93122 (+/- 0.01177)\n",
+      "Precision Dos Rfec: 0.98912 (+/- 0.00563)\n",
+      "Recall Dos Rfec: 0.85107 (+/- 0.02838)\n",
+      "F-measure Dos Rfec: 0.91485 (+/- 0.01592)\n"
      ]
     }
    ],
@@ -6580,10 +6572,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy Probe Rfec: 0.93216 (+/- 0.01386)\n",
-      "Precision Probe Rfec: 0.91554 (+/- 0.02244)\n",
-      "Recall Probe Rfec: 0.86491 (+/- 0.02924)\n",
-      "F-measure Probe Rfec: 0.88703 (+/- 0.02466)\n"
+      "Accuracy Probe Rfec: 0.93637 (+/- 0.01346)\n",
+      "Precision Probe Rfec: 0.92878 (+/- 0.01694)\n",
+      "Recall Probe Rfec: 0.86583 (+/- 0.03147)\n",
+      "F-measure Probe Rfec: 0.89261 (+/- 0.02514)\n"
      ]
     }
    ],
@@ -6607,10 +6599,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy R2L Rfec: 0.79938 (+/- 0.02426)\n",
-      "Precision R2L Rfec: 0.71558 (+/- 0.04524)\n",
-      "Recall R2L Rfec: 0.65683 (+/- 0.03455)\n",
-      "F-measure R2L Rfec: 0.67462 (+/- 0.03781)\n"
+      "Accuracy R2L Rfec: 0.82280 (+/- 0.02307)\n",
+      "Precision R2L Rfec: 0.77523 (+/- 0.04460)\n",
+      "Recall R2L Rfec: 0.66629 (+/- 0.04481)\n",
+      "F-measure R2L Rfec: 0.69273 (+/- 0.05017)\n"
      ]
     }
    ],
@@ -6634,10 +6626,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy U2R Rfec: 0.99315 (+/- 0.00093)\n",
-      "Precision U2R Rfec: 0.49657 (+/- 0.00047)\n",
-      "Recall U2R Rfec: 0.50000 (+/- 0.00000)\n",
-      "F-measure U2R Rfec: 0.49828 (+/- 0.00023)\n"
+      "Accuracy U2R Rfec: 0.99325 (+/- 0.00187)\n",
+      "Precision U2R Rfec: 0.66344 (+/- 0.44767)\n",
+      "Recall U2R Rfec: 0.52961 (+/- 0.07304)\n",
+      "F-measure U2R Rfec: 0.54759 (+/- 0.12246)\n"
      ]
     }
    ],
@@ -6661,7 +6653,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy DoS: 0.92150 (+/- 0.01487)\n"
+      "Accuracy DoS: 0.93122 (+/- 0.01177)\n"
      ]
     }
    ],
@@ -6681,7 +6673,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy Probe: 0.93216 (+/- 0.01386)\n"
+      "Accuracy Probe: 0.93637 (+/- 0.01346)\n"
      ]
     }
    ],
@@ -6699,7 +6691,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy R2L: 0.79938 (+/- 0.02426)\n"
+      "Accuracy R2L: 0.82280 (+/- 0.02307)\n"
      ]
     }
    ],
@@ -6717,7 +6709,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy U2R: 0.99315 (+/- 0.00093)\n"
+      "Accuracy U2R: 0.99325 (+/- 0.00187)\n"
      ]
     }
    ],
@@ -6735,9 +6727,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy DoS 2 FOLD: 0.92202 (+/- 0.00663)\n",
-      "Accuracy DoS 5 FOLD: 0.92155 (+/- 0.01162)\n",
-      "Accuracy DoS 10 FOLD: 0.92150 (+/- 0.01487)\n"
+      "Accuracy DoS 2 FOLD: 0.93017 (+/- 0.00617)\n",
+      "Accuracy DoS 5 FOLD: 0.93105 (+/- 0.00869)\n",
+      "Accuracy DoS 10 FOLD: 0.93122 (+/- 0.01177)\n"
      ]
     }
    ],
@@ -6762,9 +6754,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy Probe 2 FOLD: 0.93290 (+/- 0.00066)\n",
-      "Accuracy Probe 5 FOLD: 0.93216 (+/- 0.00917)\n",
-      "Accuracy Probe 10 FOLD: 0.93216 (+/- 0.01386)\n"
+      "Accuracy Probe 2 FOLD: 0.93595 (+/- 0.00313)\n",
+      "Accuracy Probe 5 FOLD: 0.93604 (+/- 0.01197)\n",
+      "Accuracy Probe 10 FOLD: 0.93637 (+/- 0.01346)\n"
      ]
     }
    ],
@@ -6788,9 +6780,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy R2L 2 FOLD: 0.79890 (+/- 0.00683)\n",
-      "Accuracy R2L 5 FOLD: 0.79533 (+/- 0.01662)\n",
-      "Accuracy R2L 10 FOLD: 0.79938 (+/- 0.02426)\n"
+      "Accuracy R2L 2 FOLD: 0.82201 (+/- 0.00064)\n",
+      "Accuracy R2L 5 FOLD: 0.82312 (+/- 0.00992)\n",
+      "Accuracy R2L 10 FOLD: 0.82280 (+/- 0.02307)\n"
      ]
     }
    ],
@@ -6814,9 +6806,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy U2R 2 FOLD: 0.99315 (+/- 0.00020)\n",
-      "Accuracy U2R 5 FOLD: 0.99315 (+/- 0.00050)\n",
-      "Accuracy U2R 10 FOLD: 0.99315 (+/- 0.00093)\n"
+      "Accuracy U2R 2 FOLD: 0.99345 (+/- 0.00000)\n",
+      "Accuracy U2R 5 FOLD: 0.99345 (+/- 0.00119)\n",
+      "Accuracy U2R 10 FOLD: 0.99325 (+/- 0.00187)\n"
      ]
     }
    ],
